--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-    "name": "casper",
-    "description": "The default personal blogging theme for Ghost. Beautiful, minimal and responsive.",
-    "demo": "https://demo.ghost.io",
-    "version": "2.7.0",
+    "name": "casper-baribuilder",
+    "description": "Custom theme adapted from Casper",
+    "version": "1.0.0",
     "engines": {
         "ghost": ">=2.0.0"
     },
@@ -17,9 +16,9 @@
         "test": "gscan ."
     },
     "author": {
-        "name": "Ghost Foundation",
-        "email": "hello@ghost.org",
-        "url": "https://ghost.org"
+        "name": "BariBuilder",
+        "email": "feedback@baribuilder.com",
+        "url": "https://baribuilder.com"
     },
     "gpm": {
         "type": "theme",
@@ -37,8 +36,7 @@
         "type": "git",
         "url": "https://github.com/TryGhost/Casper.git"
     },
-    "bugs": "https://github.com/TryGhost/Casper/issues",
-    "contributors": "https://github.com/TryGhost/Casper/graphs/contributors",
+    "bugs": "https://github.com/tadasant/casper-baribuilder",
     "devDependencies": {
         "autoprefixer": "6.3.6",
         "cssnano": "3.7.1",
